--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -26,5 +26,14 @@ jobs:
               terraform_wrapper: false
 
           - name: Terraform Init
+            env:
+                ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
             id: terraform-init
             run: terraform init
+
+            
+          - name: Terraform Plan
+          env:
+              ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
+          id: terraform-plan
+          run: terraform plan
